# smart-agent

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  example_package_demo.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  relative_import_demo.py  test_file.txt
backend/: .dockerignore  Dockerfile  README.md  env.example  main.py  pyproject.toml  requirements.txt  test_deepseek.py
backend/src/: __init__.py
backend/src/api/: asr_routes.py  document_routes.py  server.py  websearch_routes.py
backend/src/core/: auto_reconnect_checkpointer.py  checkpointer_adapter.py  config.py  graph.py  graph_spec.py  system_prompt.py
backend/src/intent/: README.md  add.txt  clues.yaml  config.json  config_utils.py  gazetter_updated.py  geo_dict.csv  manager.py  np_rater.py  slot_pipeline.py  unresolved_report.py
backend/src/models/: types.py
backend/src/services/: __init__.py  document_service.py  graphiti_service.py
backend/src/store/: threads_pg.py
backend/src/tools/: __init__.py  database.py  date.py  market.py  registry.py  tools.py  vector_search.py  vector_tool.py
backend/src/tools/document/: __init__.py  classifier.py  document_tools.py  partition_manager.py  processor.py  search_engine.py
backend/src/tools/kg/: neo4j_tools.py
backend/src/tools/legacy/: financial_reports.py
backend/src/tools/sql/: __init__.py  builders.py  mysql_base.py  mysql_structured.py  mysql_tool.py  types.py
backend/src/tools/web/: tavily.py
backend/tests/: test_sql_query_tools.py  test_sql_query_tools_subquery_ops.py
frontend/: .dockerignore  .env.example  (+7 more)
(+47 files in other folders)
